# airline_seating

./: Cargo.toml  README.md  flight_example.json
src/: airline_seating_view.rs  costs_view.rs  flight.rs  flight_info.rs  main.rs  map_view.rs  passenger.rs  passengers_view.rs
