[package]
name = "airline_seating"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.20.0", features = ["crossterm-backend"], default-features = false}
cursive_buffered_backend = "0.6.1"
